--- a/public/index.html
+++ b/public/index.html
@@ -60,29 +60,29 @@
       <br><br><b><a href="#casaFKL">Casa F.K.L. </b><br> Texto</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a> <br><a href="#casaFG3"> Videos </a> 
       <br><br><b><a href="#creciendo">Creciendo en Público <br></b> Newsletter Errático</a>
       <br><br><b> <a href="#erewhon">Erewhon <br> </b> Textos</a> <br><a href="#casaFG3"> Proposiciones</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><a href="#estados">Personajismo<br>/ Del Arquitecto-Estrella al Arquitecto-Constelación</a>
-      <br><br><a href="#muros">Muros, Puertas y Vanos <br>/ Hacia un Minimalismo Explosivo</a>
-      <br><br><a href="#mothershiptheatre">MothershipTheatre <br>/ Thesis for an Opaque Architecture</a> <br><a href="#casaFG2">/ Imágenes </a> <br><a href="#casaFG3">/ Videos e</a>  
-      <br><br><a href="#sinestado">Arquitectura sin Estado <br>/ Albergues para Multitudes</a> <br><a href="#casaFG2">/ Multitudes en Movimiento </a> <br><a href="#casaFG3">/ Modelos </a> <br><a href="#casaFG3">/ Dibujos </a> 
-      <br><br><a href="#estados">Never Even <br> /(Respeto por las Cosas como Son)</a>
-      <br><br><a href="#estados">Singular 00 <br> /Proposición</a>
-      <br><br><a href="#vanguardias">Vanguardias o Nada <br>/ Manifiestos a Priori</a><br><a href="#casaFG2">/ Manifiestos Prospectivos </a>
-      <br><br><a href="#ametralladora">Ametralladora de Utopías <br>/ Texto</a><br><a href="#casaFG2">/ Técnicas</a>      
-      <br><br><a href="#creciendo">Pasar la Noche Juntos <br>/ Texto</a><br><a href="#casaFG3">/ Entrevistas </a>
-      <br><br><a href="#estados">Estados de la Arquitectura <br>/ Seis Alegorías</a> <a href="#casaFG3">/ Imágenes</a>
-      <br><br><a href="#estados">Agrupación Militancia Arquitectura <br>/ Fanzine 2013</a> 
-      <br><br><a href="#estados">El Cuerpo Hueco de la Arquitectura<br>/Circular #01. Arquitectura, Cuerpo y Cosmos</a>
-      <br><br><a href="#estados">Architecture Postponed<br>/Texto</a><br><a href="#casaFG2">/Architecture Museum </a>
-      <br><br><a href="#estados">Tu Amorosa<br>/Texto</a><br><a href="#casaFG2">/Serla </a>
-      <br><br><a href="#estados">Hacia una Arquitectura sin Fin <br> /Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
-      <br><br><a href="#estados">Un Memorial para la Revolución<br> / No Man´s Land</a> <br><a href="#casaFG3">/ Imágenes </a>
-      <br><br><a href="#estados">En el Muro <br>/Texto</a> <br><a href="#casaFG3">/ Dibujos </a> <br><a href="#casaFG3">/ Imágenes</a>
-      <br><br><a href="#estados">Parque de las Ciencias<br> /Un Océano de Columnas </a> <br><a href="#casaFG3">/ Dibujos</a> <br><a href="#casaFG3">/ Imágenes</a>
-      <br><br><a href="#estados">Laberinto <br>/Texto</a> <br><a href="#casaFG3">/ Dibujos</a> <br><a href="#casaFG3">/ Imágenes</a>
-      <br><br><a href="#estados">Geometrías Invisibles <br>/Texto</a> <br><a href="#casaFG3">/ Imágenes</a> 
+      <br><br><a href="#estados">Personajismo<br> Del Arquitecto-Estrella al Arquitecto-Constelación</a>
+      <br><br><a href="#muros">Muros, Puertas y Vanos <br> Hacia un Minimalismo Explosivo</a>
+      <br><br><a href="#mothershiptheatre">MothershipTheatre <br> Thesis for an Opaque Architecture</a> <br><a href="#casaFG2"> Imágenes </a> <br><a href="#casaFG3"> Videos e</a>  
+      <br><br><a href="#sinestado">Arquitectura sin Estado <br> Albergues para Multitudes</a> <br><a href="#casaFG2"> Multitudes en Movimiento </a> <br><a href="#casaFG3"> Modelos </a> <br><a href="#casaFG3"> Dibujos </a> 
+      <br><br><a href="#estados">Never Even <br> (Respeto por las Cosas como Son)</a>
+      <br><br><a href="#estados">Singular 00 <br> Proposición</a>
+      <br><br><a href="#vanguardias">Vanguardias o Nada <br> Manifiestos a Priori</a><br><a href="#casaFG2"> Manifiestos Prospectivos </a>
+      <br><br><a href="#ametralladora">Ametralladora de Utopías <br> Texto</a><br><a href="#casaFG2"> Técnicas</a>      
+      <br><br><a href="#creciendo">Pasar la Noche Juntos <br> Texto</a><br><a href="#casaFG3"> Entrevistas </a>
+      <br><br><a href="#estados">Estados de la Arquitectura <br> Seis Alegorías</a> <a href="#casaFG3"> Imágenes</a>
+      <br><br><a href="#estados">Agrupación Militancia Arquitectura <br> Fanzine 2013</a> 
+      <br><br><a href="#estados">El Cuerpo Hueco de la Arquitectura<br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>
+      <br><br><a href="#estados">Architecture Postponed<br> Texto</a><br><a href="#casaFG2"> Architecture Museum </a>
+      <br><br><a href="#estados">Tu Amorosa<br>Texto</a><br><a href="#casaFG2">Serla </a>
+      <br><br><a href="#estados">Hacia una Arquitectura sin Fin <br> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
+      <br><br><a href="#estados">Un Memorial para la Revolución<br>  No Man´s Land</a> <br><a href="#casaFG3"> Imágenes </a>
+      <br><br><a href="#estados">En el Muro <br>Texto</a> <br><a href="#casaFG3"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><a href="#estados">Parque de las Ciencias<br> Un Océano de Columnas </a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><a href="#estados">Laberinto <br>Texto</a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><a href="#estados">Geometrías Invisibles <br>Texto</a> <br><a href="#casaFG3"> Imágenes</a> 
       <br><br><a href="#estados">Hoy el Mundo <br>/Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
-      <br><br><a href="#estados">Estudio <br>/Texto</a>  <a href="#casaFG3">/ Oficina/a>
-      <br><br><a href="#estados">Sitio Web <br>/Tapiz</a>
+      <br><br><a href="#estados">Estudio <br>Texto</a>  <a href="#casaFG3"> Oficina/a>
+      <br><br><a href="#estados">Sitio Web <br>Tapiz</a>
     </div>
 
     <div class="column" style="width: 5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
