--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 
 	<title>Login - Manuel Mensa</title>
-	<link rel="icon" type="image/x-icon" href="assets/img/00_logo/logo-MW.png">
+	<link rel="icon" type="image/x-icon" href="assets/img/00_logo/mm-logo.jpg">
     <style>
         body {
           background-color: #ffffff;
