--- a/public/index.html
+++ b/public/index.html
@@ -50,39 +50,39 @@
       <h3>Manuel Mensa</h3>
       <b><a href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
-      <br> <p>Índice</p>
-      <br><a href="#matters">Matters of Fact <br>  El Inevitable Sufrimiento de la Arquitectura</a>
+      <br> <b><p>Índice</p></b>
+      <br><b><a href="#matters">Matters of Fact <br></b>  El Inevitable Sufrimiento de la Arquitectura</a>
       <br><br><b><a style="text-decoration:none">Casa J.B.R.C. <br> </a></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
-      <br><br><a style="text-decoration:none">Casa E.R.C.P. </a> <br><b><a href="#casaERCP"> Texto </a> </b><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
+      <br><br><b><a style="text-decoration:none">Casa E.R.C.P. </a> <br></b> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
       <br><br><b><a style="text-decoration:none">Casa F.G. </a> </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Planos </a> <br><a href="#casaFG3"> Fotografías</a>
-      <br><br><b><a href="#cute-chitecture">Cute-chitecture </b> <br> Arquitectura Póstuma</a> <br><a href="#casaFG3"> Cenotafios </a> <br><a href="#casaFG3"> Puentes </a> 
-      <br><br><b> <a href="#edificioSCW">Edificio S.C.W. <br> </b> Texto </a> <br> <a href="#casaFG3"> Dibujos </a> <br> <a href="#casaFG3"> Imágenes</a> 
-      <br><br><b><a href="#casaFKL">Casa F.K.L. </b><br> Texto</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a> <br><a href="#casaFG3"> Videos </a> 
-      <br><br><b><a href="#creciendo">Creciendo en Público <br></b> Newsletter Errático</a>
-      <br><br><b> <a href="#erewhon">Erewhon <br> </b> Textos</a> <br><a href="#casaFG3"> Proposiciones</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><a href="#estados">Personajismo<br> Del Arquitecto-Estrella al Arquitecto-Constelación</a>
-      <br><br><a href="#muros">Muros, Puertas y Vanos <br> Hacia un Minimalismo Explosivo</a>
-      <br><br><a href="#mothershiptheatre">MothershipTheatre <br> Thesis for an Opaque Architecture</a> <br><a href="#casaFG2"> Imágenes </a> <br><a href="#casaFG3"> Videos e</a>  
-      <br><br><a href="#sinestado">Arquitectura sin Estado <br> Albergues para Multitudes</a> <br><a href="#casaFG2"> Multitudes en Movimiento </a> <br><a href="#casaFG3"> Modelos </a> <br><a href="#casaFG3"> Dibujos </a> 
-      <br><br><a href="#estados">Never Even <br> (Respeto por las Cosas como Son)</a>
-      <br><br><a href="#estados">Singular 00 <br> Proposición</a>
-      <br><br><a href="#vanguardias">Vanguardias o Nada <br> Manifiestos a Priori</a><br><a href="#casaFG2"> Manifiestos Prospectivos </a>
-      <br><br><a href="#ametralladora">Ametralladora de Utopías <br> Texto</a><br><a href="#casaFG2"> Técnicas</a>      
-      <br><br><a href="#creciendo">Pasar la Noche Juntos <br> Texto</a><br><a href="#casaFG3"> Entrevistas </a>
-      <br><br><a href="#estados">Estados de la Arquitectura <br> Seis Alegorías</a> <a href="#casaFG3"> Imágenes</a>
-      <br><br><a href="#estados">Agrupación Militancia Arquitectura <br> Fanzine 2013</a> 
-      <br><br><a href="#estados">El Cuerpo Hueco de la Arquitectura<br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>
-      <br><br><a href="#estados">Architecture Postponed<br> Texto</a><br><a href="#casaFG2"> Architecture Museum </a>
-      <br><br><a href="#estados">Tu Amorosa<br>Texto</a><br><a href="#casaFG2">Serla </a>
-      <br><br><a href="#estados">Hacia una Arquitectura sin Fin <br> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
-      <br><br><a href="#estados">Un Memorial para la Revolución<br>  No Man´s Land</a> <br><a href="#casaFG3"> Imágenes </a>
-      <br><br><a href="#estados">En el Muro <br>Texto</a> <br><a href="#casaFG3"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><a href="#estados">Parque de las Ciencias<br> Un Océano de Columnas </a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><a href="#estados">Laberinto <br>Texto</a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><a href="#estados">Geometrías Invisibles <br>Texto</a> <br><a href="#casaFG3"> Imágenes</a> 
-      <br><br><a href="#estados">Hoy el Mundo <br>/Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
-      <br><br><a href="#estados">Estudio <br>Texto</a>  <a href="#casaFG3"> Oficina/a>
-      <br><br><a href="#estados">Sitio Web <br>Tapiz</a>
+      <br><br><b><a href="#cute-chitecture">Cute-chitecture </b></a> <br> <a href="#cute-chitecture"> Arquitectura Póstuma</a> <br><a href="#casaFG3"> Cenotafios </a> <br><a href="#casaFG3"> Puentes </a> 
+      <br><br><b> <a href="#edificioSCW">Edificio S.C.W. <br> </a> </b> <a href="#cute-chitecture"> Texto </a> <br> <a href="#casaFG3"> Dibujos </a> <br> <a href="#casaFG3"> Imágenes</a> 
+      <br><br><b><a href="#casaFKL"> Casa F.K.L. </a> </b><br> <a href="#cute-chitecture">Texto</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a> <br><a href="#casaFG3"> Videos </a> 
+      <br><br><b><a href="#creciendo">Creciendo en Público <br> </a> </b> <a href="#cute-chitecture"> Newsletter Errático</a>
+      <br><br><b> <a href="#erewhon">Erewhon <br> </a> </b> <a href="#cute-chitecture"> Textos</a> <br><a href="#casaFG3"> Proposiciones</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><b><a href="#estados">Personajismo<br> </a> </b> <a href="#cute-chitecture">Del Arquitecto-Estrella al Arquitecto-Constelación</a>
+      <br><br><b> <a href="#muros">Muros, Puertas y Vanos <br></b> Hacia un Minimalismo Explosivo</a>
+      <br><br><b><a href="#mothershiptheatre">MothershipTheatre </b><br> Thesis for an Opaque Architecture</a> <br><a href="#casaFG2"> Imágenes </a> <br><a href="#casaFG3"> Videos e</a>  
+      <br><br> <b> <a href="#sinestado">Arquitectura sin Estado <br> </b> Albergues para Multitudes</a> <br><a href="#casaFG2"> Multitudes en Movimiento </a> <br><a href="#casaFG3"> Modelos </a> <br><a href="#casaFG3"> Dibujos </a> 
+      <br><br><b><a href="#estados">Never Even <br> </b> (Respeto por las Cosas como Son)</a>
+      <br><br><b><a href="#estados">Singular 00 <br></b> Proposición</a>
+      <br><br><b><a href="#vanguardias">Vanguardias o Nada <br></b> Manifiestos a Priori</a><br><a href="#casaFG2"> Manifiestos Prospectivos </a>
+      <br><br><b><a href="#ametralladora">Ametralladora de Utopías </b> <br> Texto</a><br><a href="#casaFG2"> Técnicas</a>      
+      <br><br><b><a href="#creciendo">Pasar la Noche Juntos </b> <br> Texto</a><br><a href="#casaFG3"> Entrevistas </a>
+      <br><br><b><a href="#estados">Estados de la Arquitectura </b><br> Seis Alegorías</a> <a href="#casaFG3"> Imágenes</a>
+      <br><br><b><a href="#estados">Agrupación Militancia Arquitectura </b><br> Fanzine 2013</a> 
+      <br><br><b><a href="#estados">El Cuerpo Hueco de la Arquitectura </b><br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>
+      <br><br><b><a href="#estados">Architecture Postponed<br> </b> Texto</a><br><a href="#casaFG2"> Architecture Museum </a>
+      <br><br><b><a href="#estados">Tu Amorosa </b><br>Texto</a><br><a href="#casaFG2">Serla </a>
+      <br><br><b><a href="#estados">Hacia una Arquitectura sin Fin </b><br> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
+      <br><br><b><a href="#estados">Un Memorial para la Revolución<br></b>  No Man´s Land</a> <br><a href="#casaFG3"> Imágenes </a>
+      <br><br><b><a href="#estados">En el Muro </b><br>Texto</a> <br><a href="#casaFG3"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><b><a href="#estados">Parque de las Ciencias<br></b> Un Océano de Columnas </a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><b><a href="#estados">Laberinto </b><br>Texto</a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><b><a href="#estados">Geometrías Invisibles </b> <br>Texto</a> <br><a href="#casaFG3"> Imágenes</a> 
+      <br><br><b><a href="#estados">Hoy el Mundo </b> <br>Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
+      <br><br> <b><a href="#estados">Estudio </b><br>Texto</a> <br><a href="#casaFG3"> Oficina </a>
+      <br><br><b><a href="#estados">Sitio Web </b><br>Tapiz</a>
     </div>
 
     <div class="column" style="width: 5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
