--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       <b><a href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
       <br> <b><p>Índice</p></b>
-      <br><b><a href="#matters">Matters of Fact <br></b>  El Inevitable Sufrimiento de la Arquitectura</a>
+      <br><br><b><a style="text-decoration:none">Matters of Fact <br></a> </b><a href="#casaFG3"> El Inevitable Sufrimiento de la Arquitectura</a>
       <br><br><b><a style="text-decoration:none">Casa J.B.R.C. <br> </a></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
       <br><br><b><a style="text-decoration:none">Casa E.R.C.P. </a> <br></b> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
       <br><br><b><a style="text-decoration:none">Casa F.G. </a> </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Planos </a> <br><a href="#casaFG3"> Fotografías</a>
@@ -63,7 +63,7 @@
       <br><br><b><a style="text-decoration:none">Personajismo<br> </a> </b> <a href="#cute-chitecture">Del Arquitecto-Estrella al Arquitecto-Constelación</a>
       <br><br><b><a style="text-decoration:none">Muros, Puertas y Vanos <br> </a> </b> <a href="#casaFG3"> Hacia un Minimalismo Explosivo</a>
       <br><br><b><a style="text-decoration:none">MothershipTheatre </b> </a> <br> <a href="#casaFG3"> Thesis for an Opaque Architecture</a> <br><a href="#casaFG2"> Imágenes </a> <br><a href="#casaFG3"> Videos e</a>  
-      <br><br> <b><a style="text-decoration:none">Arquitectura sin Estado <br> </a> <a href="#casaFG3"> </b> Albergues para Multitudes</a> <br><a href="#casaFG2"> Multitudes en Movimiento </a> <br><a href="#casaFG3"> Modelos </a> <br><a href="#casaFG3"> Dibujos </a> 
+      <br><br> <b><a style="text-decoration:none">Arquitectura sin Estado <br></a></b>  <a href="#casaFG3">  Albergues para Multitudes</a> <br><a href="#casaFG2"> Multitudes en Movimiento </a> <br><a href="#casaFG3"> Modelos </a> <br><a href="#casaFG3"> Dibujos </a> 
       <br><br><b><a style="text-decoration:none">Never Even <br> </b> </a> <a href="#casaFG3"> (Respeto por las Cosas como Son)</a>
       <br><br><b><a style="text-decoration:none">Singular 00 <br></b> </a> <a href="#casaFG3"> Proposición</a>
       <br><br><b><a style="text-decoration:none">Vanguardias o Nada <br> </a> </b> <a href="#casaFG3"> Manifiestos a Priori</a><br><a href="#casaFG2"> Manifiestos Prospectivos </a>
@@ -72,13 +72,13 @@
       <br><br><b><a style="text-decoration:none">Estados de la Arquitectura </b> </a> <a href="#casaFG3"> <br> Seis Alegorías</a> <a href="#casaFG3"> Imágenes</a>
       <br><br><b><a style="text-decoration:none">Agrupación Militancia Arquitectura </b> </a> <a href="#casaFG3"> <br> Fanzine 2013</a> 
       <br><br><b><a style="text-decoration:none">El Cuerpo Hueco de la Arquitectura </b></a> <a href="#casaFG3"> <br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>
-      <br><br><b><a style="text-decoration:none">Architecture Postponed<br> </b> Texto</a><br><a href="#casaFG2"> Architecture Museum </a>
-      <br><br><b><a style="text-decoration:none">Tu Amorosa </b><br>Texto</a><br><a href="#casaFG2">Serla </a>
+      <br><br><b><a style="text-decoration:none">Architecture Postponed<br> </a> <a href="#casaFG3"> </b> Texto</a><br><a href="#casaFG2"> Architecture Museum </a>
+      <br><br><b><a style="text-decoration:none">Tu Amorosa </b> </a> <a href="#casaFG3"><br>Texto</a><br><a href="#casaFG2">Serla </a>
       <br><br><b><a style="text-decoration:none">Hacia una Arquitectura sin Fin </b></a> <br> <a href="#casaFG3"> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
       <br><br><b><a style="text-decoration:none">Un Memorial para la Revolución<br></b> </a> <a href="#casaFG3">  No Man´s Land</a> <br><a href="#casaFG3"> Imágenes </a>
       <br><br><b><a style="text-decoration:none">En el Muro </b></a> <a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
       <br><br><b><a style="text-decoration:none">Parque de las Ciencias<br></b> </a> <a href="#casaFG3">Un Océano de Columnas </a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><b><a style="text-decoration:none">Laberinto </b><br>Texto</a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><b><a style="text-decoration:none">Laberinto </b></a> <a href="#casaFG3"> <br>Texto</a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
       <br><br><b><a style="text-decoration:none">Geometrías Invisibles </b> </a> <a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Imágenes</a> 
       <br><br><b><a style="text-decoration:none">Hoy el Mundo </b> </a> <br> <a href="#casaFG3"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
       <br><br> <b><a style="text-decoration:none"> Estudio </b></a> <a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Oficina </a>
