--- a/public/index.html
+++ b/public/index.html
@@ -646,22 +646,32 @@ profundidad hasta alcanzar el ancho de la próxima línea de escaleras volviénd
       <h3 style="color:white;">.</h3>
       <p>Proposiciones</p>
       <br>
-      <b><p>Stagger</p></b>
+      <b><p>StaGGer</p></b>
       <p>Paired stairs emanating from a center form an <u>orderly</u> labyrinth, creating a <u>flitting </u>yet recognizable path.
 Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial <u>evolution</u>.</p>
   <br>
-      <b><p>Stagggger</p></b>
+      <b><p>StaGGGGer</p></b>
       <p>Paired stairs emanating from a center form a <u>challenging</u> labyrinth, creating a <u>shifting</u> yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial <u>abundance</u>.</p>
       <br>
-      <b><p>Stagggggger</p></b>
+      <b><p>StaGGGGGGer</p></b>
       <p>Paired stairs emanating from a center form a <u>complex</u> labyrinth, creating a <u>fleeting</u> yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial <u>proliferation.</u></p>
      <br>
-      <b><p>Stagggggggger</p></b>
+      <b><p>StaGGGGGGGGer</p></b>
+      <p>Paired stairs emanating from a center form an <u>inmense</u> labyrinth, creating a <u>variegated</u> yet recognizable
+path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
+shaping spatial <u>profusion</u>.</p>
+      <br>
+      <b><p>StaGGGGGGGGGGer</p></b>
+      <p>Paired stairs emanating from a center form an <u>inmense</u> labyrinth, creating a <u>variegated</u> yet recognizable
+path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
+shaping spatial <u>profusion</u>.</p>
+      <br>
+      <b><p>StaGGGGGGGGGGGGer</p></b>
       <p>Paired stairs emanating from a center form an <u>inmense</u> labyrinth, creating a <u>variegated</u> yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial <u>profusion</u>.</p>
@@ -673,18 +683,24 @@ shaping spatial <u>profusion</u>.</p>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
       <br>
-      <b><p>Stagger</p></b>
+      <b><p>StaGGer</p></b>
       <br>
       <img loading="lazy" src="assets/img/33_rooms/09.jpg" alt="Image 1">
-      <b><p>Stagggger</p></b>
+      <b><p>StaGGGGer</p></b>
       <br>
       <img loading="lazy" src="assets/img/33_rooms/10.jpg" alt="Image 1">
-      <b><p>Stagggggger</p></b>
+      <b><p>StaGGGGGGer</p></b>
       <br>
       <img loading="lazy" src="assets/img/33_rooms/11.jpg" alt="Image 1">
-      <b><p>Stagggggggger</p></b>
+      <b><p>StaGGGGGGGGer</p></b>
       <br>
       <img loading="lazy" src="assets/img/33_rooms/12.jpg" alt="Image 1">
+       <b><p>StaGGGGGGGGGGer</p></b>
+      <br>
+      <img loading="lazy" src="assets/img/33_rooms/17.jpg" alt="Image 1">
+       <b><p>StaGGGGGGGGGGGGer</p></b>
+      <br>
+      <img loading="lazy" src="assets/img/33_rooms/18.jpg" alt="Image 1">
       <br>
       <!-- Add more content here if needed -->
     </div>
@@ -693,22 +709,30 @@ shaping spatial <u>profusion</u>.</p>
       <h3 style="color:white;">.</h3>
       <p>Imágenes</p>
       <br>
-      <b><p>Stagger</p></b>
+      <b><p>StaGGer</p></b>
       <br>
       <img loading="lazy" src="assets/img/33_rooms/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/33_rooms/02.png" alt="Image 1">
-      <b><p>Stagggger</p></b>
+      <b><p>StaGGGGer</p></b>
      <br>
       <img loading="lazy" src="assets/img/33_rooms/03.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/33_rooms/04.png" alt="Image 1">
-      <b><p>Stagggggger</p></b>
+      <b><p>StaGGGGGGer</p></b>
       <br>
       <img loading="lazy" src="assets/img/33_rooms/05.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/33_rooms/06.png" alt="Image 1">
-      <b><p>Stagggggggger</p></b>
+      <b><p>StaGGGGGGGGer</p></b>
       <br>
       <img loading="lazy" src="assets/img/33_rooms/07.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/33_rooms/08.png" alt="Image 1">
+      <b><p>StaGGGGGGGGGGer</p></b>
+      <br>
+      <img loading="lazy" src="assets/img/33_rooms/13.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/33_rooms/14.png" alt="Image 1">
+       <b><p>StaGGGGGGGGGGGGer</p></b>
+      <br>
+      <img loading="lazy" src="assets/img/33_rooms/15.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/33_rooms/16.png" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
 
