--- a/public/index.html
+++ b/public/index.html
@@ -1371,17 +1371,17 @@ La primera vez que escuché hablar sobre Ferdydurke alguien me dijo que había s
    <br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/01.png" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/01.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=29s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/02.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=77s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/03.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=124s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/04.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=182s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/05.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=230s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/06.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=310s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/07.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=399s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/08.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=454s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/09.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=568s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/10.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/12.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=29&si=lWtBpmY-uVokQxj_" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/02.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=77&si=t3RJBRJt4RHMnt3-" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/03.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=124&si=0wt08sfvW_009kFr" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/04.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=182&si=wEvQJT3HJSmWzEpx" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/05.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=230&si=NlMFkKTZlX6bd_GY" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/06.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=310&si=BC0cq3Vcb11YVDJs" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/07.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=399&si=csYzvOrQbXZo7PtG" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/08.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=454&si=pYoGRX9JtpWiLIUB" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/09.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=568&si=am7a4EVWEzveG_Bj" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/10.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=715&si=CNzbOmXW-0wlVfME" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
+      <a href="https://youtu.be/BlgefTsb99I?t=802&si=qPX8tbGYDDu4dgEC" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/12.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/13.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/14.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img loading="lazy" src="assets/img/27_tu amorosa/15.jpg" alt="Image 1"></a><br>
