--- a/public/index.html
+++ b/public/index.html
@@ -435,8 +435,8 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <img loading="lazy" src="assets/img/32_edificio/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/32_edificio/04.jpg" alt="Image 1">
        <img loading="lazy" src="assets/img/32_edificio/07.jpg" alt="Image 1">
-    <img loading="lazy" src="assets/img/32_edificio/08.jpg" alt="Image 1">
-    <img loading="lazy" src="assets/img/32_edificio/09.jpg" alt="Image 1">
+    <img loading="lazy" src="assets/img/32_edificio/08.png" alt="Image 1">
+    <img loading="lazy" src="assets/img/32_edificio/09.png" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
     
