--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
       <br><br><b><a style="text-decoration:none">Personajismo<br> </a> </b> <a href="#cute-chitecture">Del Arquitecto-Estrella al Arquitecto-Constelación</a>
       <br><br><b><a style="text-decoration:none">Muros, Puertas y Vanos <br> </a> </b> <a href="#casaFG3"> Hacia un Minimalismo Explosivo</a>
       <br><br><b><a style="text-decoration:none">MothershipTheatre </b> </a> <br> <a href="#casaFG3"> Thesis for an Opaque Architecture</a> <br><a href="#casaFG2"> Imágenes </a> <br><a href="#casaFG3"> Videos e</a>  
-      <br><br> <b><a style="text-decoration:none">Arquitectura sin Estado <br></a></b>  <a href="#casaFG3">  Albergues para Multitudes</a> <br><a href="#casaFG2"> Multitudes en Movimiento </a> <br><a href="#casaFG3"> Modelos </a> <br><a href="#casaFG3"> Dibujos </a> 
+      <br><br><b><a style="text-decoration:none">Arquitectura sin Estado <br></a></b>  <a href="#casaFG3">  Albergues para Multitudes</a> <br><a href="#casaFG2"> Multitudes en Movimiento </a> <br><a href="#casaFG3"> Modelos </a> <br><a href="#casaFG3"> Dibujos </a> 
       <br><br><b><a style="text-decoration:none">Never Even <br> </b> </a> <a href="#casaFG3"> (Respeto por las Cosas como Son)</a>
       <br><br><b><a style="text-decoration:none">Singular 00 <br></b> </a> <a href="#casaFG3"> Proposición</a>
       <br><br><b><a style="text-decoration:none">Vanguardias o Nada <br> </a> </b> <a href="#casaFG3"> Manifiestos a Priori</a><br><a href="#casaFG2"> Manifiestos Prospectivos </a>
@@ -152,7 +152,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
 </p>
       <!-- Add more content here if needed -->
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" style="width: 30%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaJBRC2"></span>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
@@ -237,7 +237,7 @@ Ritmo: Catalina Sfer Salas</p>
       <br>
       <p>Equipo: Manuel Mensa, Lucas Torres Aguero</p><!-- Add more content here if needed -->
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" style="width: 25%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaERCP2"></span>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
@@ -288,7 +288,7 @@ Ritmo: Catalina Sfer Salas</p>
       <br>
       <p>Equipo: Manuel Mensa, Lucas Torres Agüero, Matías Etchart </p>
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaFG2"></span>
       <h3 style="color:white;">.</h3>
       <p>Dibujos</p>
