--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   
 <title>Manuel Mensa</title>
-<link rel="icon" type="image/x-icon" href="assets/img/00_logo/mm-logo.jpg">
+<link rel="icon" type="image/x-icon" href="assets/img/00_logo/manuelmensa-logo.jpeg">
   
 <link href="/assets/css/global.css" rel="stylesheet">
 
