--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       <b><a href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
       <br> <b><p>Índice</p></b>
-      <br><b><a style="text-decoration:none">Matters of Fact <br></a> </b><a href="#casaFG3" style="text-indent: 5px"> El Inevitable Sufrimiento de la Arquitectura</a>
+      <br><b>Matters of Fact <br></b><a href="#casaFG3"> El Inevitable Sufrimiento de la Arquitectura</a>
       <br><br><b><a style="text-decoration:none">Casa J.B.R.C. <br> </a></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
       <br><br><b><a style="text-decoration:none">Casa E.R.C.P. </a> <br></b> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
       <br><br><b><a style="text-decoration:none">Casa F.G. </a> </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Planos </a> <br><a href="#casaFG3"> Fotografías</a>
