--- a/public/index.html
+++ b/public/index.html
@@ -48,41 +48,41 @@
   <div class="container">
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Manuel Mensa</h3>
-      <b><a href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
+      <b><a style="left: 0px !important" href="contacto@manuelmensa.com">contacto@manuelmensa.com</a></b>
       <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
       <br> <b><p>Índice</p></b>
       <br><b>Matters of Fact <br></b><a href="#casaFG3"> El Inevitable Sufrimiento de la Arquitectura</a>
-      <br><br><b><a style="text-decoration:none">Casa J.B.R.C. <br> </a></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
-      <br><br><b><a style="text-decoration:none">Casa E.R.C.P. </a> <br></b> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
-      <br><br><b><a style="text-decoration:none">Casa F.G. </a> </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Planos </a> <br><a href="#casaFG3"> Fotografías</a>
-      <br><br><b><a style="text-decoration:none">Cute-chitecture </b></a> <br> <a href="#cute-chitecture"> Arquitectura Póstuma</a> <br><a href="#casaFG3"> Cenotafios </a> <br><a href="#casaFG3"> Puentes </a> 
-      <br><br><b><a style="text-decoration:none">Edificio S.C.W. <br> </a> </b> <a href="#cute-chitecture"> Texto </a> <br> <a href="#casaFG3"> Dibujos </a> <br> <a href="#casaFG3"> Imágenes</a> 
-      <br><br><b><a style="text-decoration:none">Casa F.K.L. </a> </b><br> <a href="#cute-chitecture">Texto</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a> <br><a href="#casaFG3"> Videos </a> 
-      <br><br><b><a style="text-decoration:none">Creciendo en Público <br> </a> </b> <a href="#cute-chitecture"> Newsletter Errático</a>
-      <br><br><b><a style="text-decoration:none">Erewhon <br> </a> </b> <a href="#cute-chitecture"> Textos</a> <br><a href="#casaFG3"> Proposiciones</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><b><a style="text-decoration:none">Personajismo<br> </a> </b> <a href="#cute-chitecture">Del Arquitecto-Estrella al Arquitecto-Constelación</a>
-      <br><br><b><a style="text-decoration:none">Muros, Puertas y Vanos <br> </a> </b> <a href="#casaFG3"> Hacia un Minimalismo Explosivo</a>
-      <br><br><b><a style="text-decoration:none">MothershipTheatre </b> </a> <br> <a href="#casaFG3"> Thesis for an Opaque Architecture</a> <br><a href="#casaFG2"> Imágenes </a> <br><a href="#casaFG3"> Videos e</a>  
-      <br><br><b><a style="text-decoration:none">Arquitectura sin Estado <br></a></b>  <a href="#casaFG3">  Albergues para Multitudes</a> <br><a href="#casaFG2"> Multitudes en Movimiento </a> <br><a href="#casaFG3"> Modelos </a> <br><a href="#casaFG3"> Dibujos </a> 
-      <br><br><b><a style="text-decoration:none">Never Even <br> </b> </a> <a href="#casaFG3"> (Respeto por las Cosas como Son)</a>
-      <br><br><b><a style="text-decoration:none">Singular 00 <br></b> </a> <a href="#casaFG3"> Proposición</a>
-      <br><br><b><a style="text-decoration:none">Vanguardias o Nada <br> </a> </b> <a href="#casaFG3"> Manifiestos a Priori</a><br><a href="#casaFG2"> Manifiestos Prospectivos </a>
-      <br><br><b><a style="text-decoration:none">Ametralladora de Utopías </b> </a> <a href="#casaFG3"> <br> Texto</a><br><a href="#casaFG2"> Técnicas</a>      
-      <br><br><b><a style="text-decoration:none">Pasar la Noche Juntos </b> </a> <a href="#casaFG3"> <br> Texto</a><br><a href="#casaFG3"> Entrevistas </a>
-      <br><br><b><a style="text-decoration:none">Estados de la Arquitectura </b> </a> <a href="#casaFG3"> <br> Seis Alegorías</a> <a href="#casaFG3"> Imágenes</a>
-      <br><br><b><a style="text-decoration:none">Agrupación Militancia Arquitectura </b> </a> <a href="#casaFG3"> <br> Fanzine 2013</a> 
-      <br><br><b><a style="text-decoration:none">El Cuerpo Hueco de la Arquitectura </b></a> <a href="#casaFG3"> <br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>
-      <br><br><b><a style="text-decoration:none">Architecture Postponed<br> </a> <a href="#casaFG3"> </b> Texto</a><br><a href="#casaFG2"> Architecture Museum </a>
-      <br><br><b><a style="text-decoration:none">Tu Amorosa </b> </a> <a href="#casaFG3"><br>Texto</a><br><a href="#casaFG2">Serla </a>
-      <br><br><b><a style="text-decoration:none">Hacia una Arquitectura sin Fin </b></a> <br> <a href="#casaFG3"> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
-      <br><br><b><a style="text-decoration:none">Un Memorial para la Revolución<br></b> </a> <a href="#casaFG3">  No Man´s Land</a> <br><a href="#casaFG3"> Imágenes </a>
-      <br><br><b><a style="text-decoration:none">En el Muro </b></a> <a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><b><a style="text-decoration:none">Parque de las Ciencias<br></b> </a> <a href="#casaFG3">Un Océano de Columnas </a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><b><a style="text-decoration:none">Laberinto </b></a> <a href="#casaFG3"> <br>Texto</a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
-      <br><br><b><a style="text-decoration:none">Geometrías Invisibles </b> </a> <a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Imágenes</a> 
-      <br><br><b><a style="text-decoration:none">Hoy el Mundo </b> </a> <br> <a href="#casaFG3"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
-      <br><br> <b><a style="text-decoration:none"> Estudio </b></a> <a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Oficina </a>
-      <br><br><b><a style="text-decoration:none">Sitio Web </a></b><a href="#casaFG3"><br>Tapiz</a>
+      <br><br><b>Casa J.B.R.C. <br></b><a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2">Planos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>
+      <br><br><b>Casa E.R.C.P. <br></b> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Planos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>
+      <br><br><b>Casa F.G. </b><br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Planos </a> <br><a href="#casaFG3"> Fotografías</a>
+      <br><br><b>Cute-chitecture </b><br> <a href="#cute-chitecture"> Arquitectura Póstuma</a> <br><a href="#casaFG3"> Cenotafios </a> <br><a href="#casaFG3"> Puentes </a> 
+      <br><br><b>Edificio S.C.W. <br></b> <a href="#cute-chitecture"> Texto </a> <br> <a href="#casaFG3"> Dibujos </a> <br> <a href="#casaFG3"> Imágenes</a> 
+      <br><br><b>Casa F.K.L. </b><br> <a href="#cute-chitecture">Texto</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a> <br><a href="#casaFG3"> Videos </a> 
+      <br><br><b>Creciendo en Público <br></b> <a href="#cute-chitecture"> Newsletter Errático</a>
+      <br><br><b>Erewhon <br></b> <a href="#cute-chitecture"> Textos</a> <br><a href="#casaFG3"> Proposiciones</a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><b>Personajismo<br></b> <a href="#cute-chitecture">Del Arquitecto-Estrella al Arquitecto-Constelación</a>
+      <br><br><b>Muros, Puertas y Vanos <br></b> <a href="#casaFG3"> Hacia un Minimalismo Explosivo</a>
+      <br><br><b>MothershipTheatre </b><br> <a href="#casaFG3"> Thesis for an Opaque Architecture</a> <br><a href="#casaFG2"> Imágenes </a> <br><a href="#casaFG3"> Videos e</a>  
+      <br><br><b>Arquitectura sin Estado <br></b>  <a href="#casaFG3">  Albergues para Multitudes</a> <br><a href="#casaFG2"> Multitudes en Movimiento </a> <br><a href="#casaFG3"> Modelos </a> <br><a href="#casaFG3"> Dibujos </a> 
+      <br><br><b>Never Even <br> </b><a href="#casaFG3"> (Respeto por las Cosas como Son)</a>
+      <br><br><b>Singular 00 <br></b><a href="#casaFG3"> Proposición</a>
+      <br><br><b>Vanguardias o Nada <br></b> <a href="#casaFG3"> Manifiestos a Priori</a><br><a href="#casaFG2"> Manifiestos Prospectivos </a>
+      <br><br><b>Ametralladora de Utopías </b><a href="#casaFG3"> <br> Texto</a><br><a href="#casaFG2"> Técnicas</a>      
+      <br><br><b>Pasar la Noche Juntos </b><a href="#casaFG3"> <br> Texto</a><br><a href="#casaFG3"> Entrevistas </a>
+      <br><br><b>Estados de la Arquitectura </b><a href="#casaFG3"> <br> Seis Alegorías</a> <a href="#casaFG3"> Imágenes</a>
+      <br><br><b>Agrupación Militancia Arquitectura </b><a href="#casaFG3"> <br> Fanzine 2013</a> 
+      <br><br><b>El Cuerpo Hueco de la Arquitectura </b><a href="#casaFG3"> <br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>
+      <br><br><b>Architecture Postponed<br><a href="#casaFG3"> </b> Texto</a><br><a href="#casaFG2"> Architecture Museum </a>
+      <br><br><b>Tu Amorosa </b><a href="#casaFG3"><br>Texto</a><br><a href="#casaFG2">Serla </a>
+      <br><br><b>Hacia una Arquitectura sin Fin </b><br> <a href="#casaFG3"> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>
+      <br><br><b>Un Memorial para la Revolución<br></b><a href="#casaFG3">  No Man´s Land</a> <br><a href="#casaFG3"> Imágenes </a>
+      <br><br><b>En el Muro </b><a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Dibujos </a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><b>Parque de las Ciencias<br></b><a href="#casaFG3">Un Océano de Columnas </a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><b>Laberinto </b><a href="#casaFG3"> <br>Texto</a> <br><a href="#casaFG3"> Dibujos</a> <br><a href="#casaFG3"> Imágenes</a>
+      <br><br><b>Geometrías Invisibles </b><a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Imágenes</a> 
+      <br><br><b>Hoy el Mundo </b><br> <a href="#casaFG3"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>
+      <br><br> <b>Estudio </b> <a href="#casaFG3"><br>Texto</a> <br><a href="#casaFG3"> Oficina </a>
+      <br><br><b>Sitio Web</b><a href="#casaFG3"><br>Tapiz</a>
     </div>
 
     <div class="column" style="width: 5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
