--- a/public/index.html
+++ b/public/index.html
@@ -640,7 +640,7 @@ profundidad hasta alcanzar el ancho de la próxima línea de escaleras volviénd
 último escalón.</p>
       <br>
        <br>
-      <p>Manuel Mensa, Nicolás Boscoboinik</p>
+      <p>Equipo: Manuel Mensa, Nicolás Boscoboinik</p>
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -668,16 +668,6 @@ shaping spatial <u>proliferation.</u></p>
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial <u>profusion</u>.</p>
       <br>
-      <b><p>StaGGGGGGGGGGer</p></b>
-      <p>Paired stairs emanating from a center form an <u>inmense</u> labyrinth, creating a <u>variegated</u> yet recognizable
-path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
-shaping spatial <u>profusion</u>.</p>
-      <br>
-      <b><p>StaGGGGGGGGGGGGer</p></b>
-      <p>Paired stairs emanating from a center form an <u>inmense</u> labyrinth, creating a <u>variegated</u> yet recognizable
-path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
-shaping spatial <u>profusion</u>.</p>
-      <br>
       <!-- Add more content here if needed -->
     </div>
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -697,13 +687,7 @@ shaping spatial <u>profusion</u>.</p>
       <b><p>StaGGGGGGGGer</p></b>
       <br>
       <img loading="lazy" src="assets/img/33_rooms/12.jpg" alt="Image 1">
-       <b><p>StaGGGGGGGGGGer</p></b>
-      <br>
-      <img loading="lazy" src="assets/img/33_rooms/17.jpg" alt="Image 1">
-       <b><p>StaGGGGGGGGGGGGer</p></b>
-      <br>
-      <img loading="lazy" src="assets/img/33_rooms/18.jpg" alt="Image 1">
-      <br>
+     
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -727,14 +711,7 @@ shaping spatial <u>profusion</u>.</p>
       <br>
       <img loading="lazy" src="assets/img/33_rooms/07.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/33_rooms/08.png" alt="Image 1">
-      <b><p>StaGGGGGGGGGGer</p></b>
-      <br>
-      <img loading="lazy" src="assets/img/33_rooms/13.jpg" alt="Image 1">
-      <img loading="lazy" src="assets/img/33_rooms/14.png" alt="Image 1">
-       <b><p>StaGGGGGGGGGGGGer</p></b>
-      <br>
-      <img loading="lazy" src="assets/img/33_rooms/15.jpg" alt="Image 1">
-      <img loading="lazy" src="assets/img/33_rooms/16.png" alt="Image 1">
+
       <!-- Add more content here if needed -->
     </div>
 
@@ -1724,8 +1701,8 @@ Las geometrías invisibles son conceptos que gobiernan todos los espacios que ha
     
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Hoy el Mundo</h3>
-      <p>Circular #02. Arquitectura, Arquitectura, Arquitectura</p>
-      <br> <p><b>A:</b><br> Hoy el mundo es economía. La arquitectura debe utilizar sus herramientas disciplinares para facilitar la administración eficiente de los recursos utilizados en la construcción de edificios. <br>
+      <p>Circular #02. Arquitectura, Arquitectura, Arquitectura
+  <br><b>A:</b><br> Hoy el mundo es economía. La arquitectura debe utilizar sus herramientas disciplinares para facilitar la administración eficiente de los recursos utilizados en la construcción de edificios. <br>
 <br><b>B:</b><br> Hoy el mundo carece de una ética. La arquitectura debe recuperar los proyectos del movimiento moderno de ayer y utilizar las herramientas tecnológicas de hoy para inventar un mundo. <br>
 <br><b>C:</b> <br>Hoy el mundo es un lugar horrible y peligroso. La arquitectura resiste al producir belleza y seguridad para sus usuarios. <br>
 <br><b>D:</b> <br>Hoy el mundo está regido por un pragmatismo extremo. Crear espacios que se alejen de la función, que cumplan con ella pero la superen y le impongan cierta distancia, es una forma de resistencia. <br>
