--- a/public/index.html
+++ b/public/index.html
@@ -439,6 +439,38 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
     <img loading="lazy" src="assets/img/32_edificio/09.png" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
+      <div class="column" style="width: 5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor"></span>
+      <h3 style="color:white;">.</h3>
+      <p style="color:white;">.</p>
+    </div>
+
+     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaFG"></span>
+      <h3>Casa F.V.</h3>
+      <p>Texto</p>
+      <br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed egestas enim. Curabitur ut venenatis erat. Cras eu nisl enim. Phasellus dapibus justo metus, sit amet molestie risus viverra vitae. Integer urna urna, accumsan nec gravida nec, suscipit at urna. Sed convallis aliquam nisi sed scelerisque. Suspendisse maximus leo id quam bibendum pellentesque.
+
+Sed ut eros sit amet massa interdum varius. Maecenas pulvinar purus a augue finibus, in tincidunt justo dapibus. Vestibulum sagittis ipsum quis diam molestie, et fringilla purus commodo. Cras et massa at odio fermentum rutrum. Nunc lacinia lacinia est ac faucibus. In efficitur malesuada aliquam. Nullam in faucibus turpis, ac cursus mauris. Sed ultrices, nisi commodo accumsan aliquet, ipsum nibh cursus ligula, sit amet dictum quam ex id nunc. Proin quis purus sem. Phasellus vel dignissim mi. Nulla dignissim enim eget orci semper, pulvinar molestie diam malesuada. Duis et turpis maximus, porta purus at, tempor neque. Donec nec libero lacus. Sed odio erat, tincidunt vitae velit at, tempus congue metus. Ut vitae scelerisque mauris, iaculis consequat neque.
+
+Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravida. Nam sit amet magna sit amet nulla varius viverra. Integer id luctus lorem. Sed ornare lectus eget ante.</p>
+      <br>
+      <br>
+      <p>Equipo: Manuel Mensa, Nicolás Boscoboinik</p><!-- Add more content here if needed -->
+    </div>
+     <div class="column" style="width: 20%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="edificioSCW"></span>
+      <h3 style="color:white;">.</h3>
+      <p>Dibujos</p>
+       <br>
+       <br>
+      <img loading="lazy" src="assets/img/32_edificio/02.jpg" alt="Image 1">
+      <img loading="lazy" src="assets/img/32_edificio/03.jpg" alt="Image 1">
+       <img loading="lazy" src="assets/img/32_edificio/05.jpg" alt="Image 1">
+         <img loading="lazy" src="assets/img/32_edificio/06.jpg" alt="Image 1">
+      <!-- Add more content here if needed -->
+    </div>
     
     <div class="column" style="width: 5%;" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor"></span>
